--- a/electronic-time-attendance/src/pages/Home/style.css
+++ b/electronic-time-attendance/src/pages/Home/style.css
@@ -40,7 +40,7 @@ h6 {
     align-items: center;
     margin-top: 10px;
     margin-bottom: 5px;
-    color: #FFA500;
+    color: #e29300;
 }
 
 .header h2 {
@@ -80,13 +80,13 @@ h6 {
 }
 
 .start-button {
-    background-color: #1a1a1a;
+    background-color: #e29300;
     font-weight:bolder;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    color: #FFA500;
+    color: #ffff;
     box-shadow: #000000 1px 1px 2px;
     padding: 15px;
     font-size: 1.5em;
@@ -96,7 +96,7 @@ h6 {
 }
 
 .start-button:hover {
-    background-color: #202020;
+    background-color: #ca8300;
 }
 
 .cronometerImg {
@@ -142,7 +142,7 @@ h6 {
     justify-content: right; 
     width: auto; 
     padding: 3px 10px;
-    color: #FFA500; 
+    color: #e29300; 
     box-shadow: #1a1a1a 0px 4px 8px;
     font-size: 1em;
     border-radius: 2px;
@@ -150,7 +150,7 @@ h6 {
     transition: background-color 0.6s;
 }
 .paginationButton b{
-    color:#FFA500
+    color:#e29300
 }
 .paginationButton Button{
     display: flex;
